update test jvm params to what is in existing trunk